# codex-webex-connector

./: .gitignore  AGENTS.md  Cargo.toml  defaults.md  plan.md  wxcd.example.toml
.github/workflows/: ci.yml  codex-review-gate.yml
crates/wxcd-cbth-rpc/: Cargo.toml
crates/wxcd-cbth-rpc/src/: lib.rs
crates/wxcd-codex/: Cargo.toml
crates/wxcd-codex/src/: lib.rs
crates/wxcd-eventlog/: Cargo.toml
crates/wxcd-eventlog/src/: lib.rs
crates/wxcd-proto/: Cargo.toml
crates/wxcd-proto/src/: config.rs  lib.rs  model.rs
crates/wxcd-render/: Cargo.toml
crates/wxcd-render/src/: lib.rs
crates/wxcd-supervisor/: Cargo.toml
crates/wxcd-supervisor/src/: main.rs
crates/wxcd-webex/: Cargo.toml
crates/wxcd-webex/src/: lib.rs
crates/wxcd-worker/: Cargo.toml
crates/wxcd-worker/src/: main.rs  tests.rs
docs/: COMMANDS.md  PROJECT_STATE.md  PROJECT_TODO.md  WEBEX_E2E_TEST_PLAN.md
docs/project_journal/2026/05/: 2026-05-05-legacy-tracker-snapshot-05ee1a8.md  2026-05-05-webex-bridge-followups-05ee1a8.md  2026-05-05-webex-bridge-history-05ee1a8.md  2026-05-13-w2-plugin-packaging-rpc-client-1989c19.md  2026-05-17-w3-cbth-managed-app-server-4b1a3db.md  2026-05-19-w4-delivery-enqueue-41d6ec5.md  2026-05-19-w5-lifecycle-hooks-ab986d1.md  2026-05-20-w6-optional-handoff-5181e85.md  2026-05-25-w7-live-upgrade-e2e-c2f3fe5.md
launchd/: com.example.wxcd.supervisor.plist
plugin/: manifest.json
scripts/: install-macos.sh  smoke-test.sh  w7_live_upgrade_e2e.py
scripts/tests/: test_w7_live_upgrade_e2e.py
sidecars/webex-ws-sidecar/: check-runtime-imports.cjs  index.cjs  package.json  path-encoding.test.cjs  pnpm-lock.yaml
