[workspace]
members = [
    "crates/wxcd-codex",
    "crates/wxcd-eventlog",
    "crates/wxcd-proto",
    "crates/wxcd-render",
    "crates/wxcd-supervisor",
    "crates/wxcd-webex",
    "crates/wxcd-worker",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
directories = "6.0"
dotenvy = "0.15"
futures = "0.3"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.47", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
wxcd-codex = { path = "crates/wxcd-codex" }
wxcd-eventlog = { path = "crates/wxcd-eventlog" }
wxcd-proto = { path = "crates/wxcd-proto" }
wxcd-render = { path = "crates/wxcd-render" }
wxcd-webex = { path = "crates/wxcd-webex" }

