[package]
name = "wxcd-eventlog"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
wxcd-proto.workspace = true
wxcd-webex.workspace = true

