[package]
name = "wxcd-supervisor"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wxcd-cbth-rpc.workspace = true
wxcd-proto.workspace = true
