[package]
name = "wxcd-worker"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wxcd-cbth-rpc.workspace = true
wxcd-codex.workspace = true
wxcd-eventlog.workspace = true
wxcd-proto.workspace = true
wxcd-render.workspace = true
wxcd-webex.workspace = true
